feat: enhance user registration and authentication with age validation and tenant-aware queries; update CORS configuration for development